# rag-ai-agent

./: AGENTS.md  README.md  pyproject.toml
app/: .env.example  docker-compose.yml  main.py  pyproject.toml
app/agent/: dependencies.py  graph_builder.py  nodes.py  orchestration.py  rag_agent.py
app/config/: schemas.py  settings.py  state.py
app/core/: embedder.py  llm.py
app/memory/: __init__.py  milvus_manager.py  postgres.py
app/prompts/: agent_prompt.md  system_prompt.md
app/service/: lifespan.py  routes.py
app/utils/: helper.py  pdf_processor.py
docs/: orchestration.md
scripts/: chatbot.py  query_milvus.py
